--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -705,6 +705,7 @@ PAGINA ATTIVITA
 	font-size: 18px;
 	text-align: left;
 	left: 5%;
+	margin-top: 1em;
 	margin-bottom: 1em;
     
 }
@@ -996,16 +997,18 @@ SEZIONE CALENDARIO
 
 }
 
+/*
 ====================
 PAGINA DINAMICA NEWS
 ====================
+*/
 
 .newscont {
-	border:4px solid white;
+	border:2px solid white;
 	float:left;
-	width:40%;
+	width:60%;
 	height:28em;
-	margin:2em 4em;
+	margin:3% 20%;
 }
 
 .titlenews {
@@ -1023,7 +1026,7 @@ PAGINA DINAMICA NEWS
 }
 
 .imgnews {
-	width:97%;
+	width:98%;
 	margin:0.5em;
 	margin-bottom: 0%;
 	overflow: auto;
