--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -1095,20 +1095,40 @@ PAGINA GALLERIA
 	font-weight: bold;
 	font-size:400%;
 	margin-top:0%;
-	margin:0 2em 0 2em;
+	margin-bottom:2%;
 	color:white;
 	text-align: center;
 }
+
+#gallerypictitle a{
+	font-size: 18px;
+	color:white;
+	float:right;
+	margin-right:5%;
+	text-decoration: underline;
+}
+
+#gallerypicbloc {
+	display: block;
+  	width: 100%;
+
+}
+
 .gallerypic {
 	margin: 2em 0em 4em 4.4em;
 	width:90%;
 }
 .gallerypicmini {
-	float:left;
-	width:10%;
-	height:6em;
-	margin:1.5em;
-	border:2px solid black;
+
+	display: inline-block;
+	vertical-align: text-top;
+
+	width: 31.3%;
+	height:25em;
+  	margin:1%;
+  	border:2px solid black;
+
+
 }
 .gallerypicmini:hover
 {
