--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -1491,25 +1491,29 @@ td {
 USER PANEL
 =================*/
 
-
+.bloccoDati {
+	margin:1% 1% 1% 8%;
+	float:left;
+	
+}
+.bloccoDati2 {
+	margin:4% 1% 4% 8%;
+	clear:both;
+	
+	
+}
 .TabUtente {
 	border:2px solid white;
-	align-content: center;
-	margin:1% 25% 2% 7%;
+	margin-left:3%;
 	float:left;
 	padding:0.5%;
 }
-.TabUtente2 {
-	border:2px solid white;
-	align-content: center;
-	margin:1% 60% 2% 7%;
-	float:left;
-	padding:0.5%;
-}
+
 .EntryUtente {
 	float:left;
 	color:#DAAC5E;
 	font-weight: bold;
+
 }
 
 .EntryTab {
@@ -1520,7 +1524,28 @@ USER PANEL
 
 .userData {
 	color: white;
+	margin:1% 1%;
 	font-weight: bold;
-	text-align: left;
-	margin:2% 0 0 5%;
+}
+.userData2 {
+	color: white;
+	font-weight: bold;
+	
+}
+.TabUtente2 {
+	color:#DAAC5E;
+	margin-left:1%;
+	float:left;
+	
+}
+#schedadownimg {
+	width:5%;
+	margin:1% 7%;
+	border: 4px solid white;
+}
+#schedadownimg:hover {
+	border: 4px solid #DAAC5E;
+}
+.lineacapo {
+	clear:both;
 }
