--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -1503,19 +1503,21 @@ USER PANEL
 	float:left;
 	color:#DAAC5E;
 	font-weight: bold;
-
+	font-size:16pt;
 }
 
 .EntryTab {
 	float: left;
 	color: white;
 	font-weight: bold;
+	font-size:16pt;
 }
 
 .userData {
 	color: white;
 	margin:1% 1%;
 	font-weight: bold;
+	font-size:18pt;
 }
 .userData2 {
 	color: white;
