--- a/CSS/Print.css
+++ b/CSS/Print.css
@@ -13,6 +13,10 @@ html, body {
 	position: relative;
 }
 
+a #backTop{
+	display: none;
+}
+
 .Menu, .sandwich, #user, #logofooter, #logofacebook, .container, .logo, #Coni, #asi  {
 	display: none;
 }
