--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -190,7 +190,7 @@ SEZIONE FOOTER
     z-index: 99;
     border: none;
     outline: none;
-    background-color: #acc0e0;
+    background-color: #DAAC5E;
     color: black;
     cursor: pointer;
     padding: 15px;
@@ -199,7 +199,8 @@ SEZIONE FOOTER
 }
 
 #backTop:hover {
-    background-color: #8294b2;
+    background-color: #DAAC5E;
+    opacity: 0.5;
 }
 
 /*
@@ -1003,7 +1004,6 @@ PAGINA DINAMICA NEWS
 	border:2px solid white;
 	float:left;
 	width:60%;
-	height:28em;
 	margin:3% 20%;
 }
 
@@ -1023,11 +1023,11 @@ PAGINA DINAMICA NEWS
 }
 
 .imgnews {
-	width:98.6%;
-	margin:0.5em;
-	margin-bottom: 0%;
-	overflow: auto;
-	height:16em;
+	float:left;
+	margin:0.5%;
+	width:99%;
+	overflow: hidden;
+	height:24em;
 }
 
 .corpopos {
@@ -1036,6 +1036,7 @@ PAGINA DINAMICA NEWS
 }
 
 .textnews{
+	float:left;
 	margin:0% 1%;
 	text-align: left;
 	width:100%;
